# hdf5-hs

./: .ghci  .travis.yml  CHANGELOG.md  README.md  Singularity  flake.nix  hdf5-hs.cabal  stack-Singularity.yaml
.github/workflows/: ci.yml
app/: Main.hs
cbits/: wrapper.c  wrapper.h
example/: example00.hs  example01.hs  example02.hs  example03.hs  example04.hs  test.h5
src/: Hdf5Hs.hs
src/Data/: HDF5.hs
src/Data/HDF5/: Context.hs  Dataset.hs  Dataspace.hs  Datatype.hs  File.hs  Group.hs  Internal.chs  Object.hs  Types.hs  Wrapper.hs
test/: Spec.hs  Utils.hs  reading_test.h5
test/Data/HDF5/: DatasetSpec.hs  DataspaceSpec.hs  FileSpec.hs  GroupSpec.hs  TypesSpec.hs
