cabal-version:       2.4
name:                hdf5-hs
version:             0.0.0.0
synopsis:            Haskell bindings to HDF5 Lite interface
description:         Haskell bindings to HDF5 Lite interface
homepage:            https://github.com/twesterhout/hdf5-hs
bug-reports:         https://github.com/twesterhout/hdf5-hs/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tom Westerhout
maintainer:          Tom Westerhout <14264576+twesterhout@users.noreply.github.com>
copyright:           2020 Tom Westerhout
build-type:          Custom
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.4
                     -- GHC == 8.6.5
                     -- GHC == 8.10.1
extra-source-files:  cbits/wrapper.h

source-repository head
  type:                git
  location:            https://github.com/twesterhout/hdf5-hs.git

custom-setup
  setup-depends:       base >= 4 && < 5, cabal-doctest >= 1 && < 1.1

common common-options
  build-depends:       base >= 4.12.0.0 && < 5
                     , relude
                     , process >= 1.2

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DefaultSignatures
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       FunctionalDependencies
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeOperators
                       TypeFamilies
                       ViewPatterns
                       DerivingStrategies
                       BangPatterns
                       RankNTypes
                       GADTs
                       PatternSynonyms
                       FlexibleContexts
                       FlexibleInstances
                       DataKinds

library
  import:              common-options
  hs-source-dirs:      src
  c-sources:           cbits/wrapper.c
  build-tool-depends:  c2hs:c2hs >= 0.28.6
  build-depends:     , directory
                     , safe-exceptions
                     , vector
                     , bytestring
                     , text
                     , some
                     , constraints
  exposed-modules:     Data.HDF5
                     , Data.HDF5.Internal
  include-dirs:        cbits
  if os(darwin) || os(osx)
    extra-libraries:   hdf5_hl
                       hdf5
  else
    pkgconfig-depends: hdf5
    extra-libraries:   hdf5_hl
                       z

executable hdf5-hs
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       hdf5-hs
                     , text
                     , vector
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable example00
  import:              common-options
  hs-source-dirs:      example
  main-is:             example00.hs 
  build-depends:       hdf5-hs
                     , text

executable example01
  import:              common-options
  hs-source-dirs:      example
  main-is:             example01.hs 
  build-depends:       hdf5-hs
                     , text
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable example02
  import:              common-options
  hs-source-dirs:      example
  main-is:             example02.hs 
  build-depends:       hdf5-hs
                     , text
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable example03
  import:              common-options
  hs-source-dirs:      example
  main-is:             example03.hs 
  build-depends:       hdf5-hs
                     , text
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite hdf5-hs-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       hdf5-hs
                     , hspec
                     , directory
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite doctests
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  build-depends:       hdf5-hs
                     , doctest
  hs-source-dirs:      test

benchmark hdf5-hs-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , hdf5-hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
