cabal-version:       2.4
name:                hdf5-hs
version:             0.1.0.0
synopsis:            High-level Haskell bindings to HDF5 library
description:         High-level Haskell bindings to HDF5 library
homepage:            https://github.com/twesterhout/hdf5-hs
bug-reports:         https://github.com/twesterhout/hdf5-hs/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tom Westerhout
maintainer:          Tom Westerhout <14264576+twesterhout@users.noreply.github.com>
copyright:           2020-2021 Tom Westerhout
build-type:          Custom
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.4
                     GHC == 8.10.3
                     -- GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/twesterhout/hdf5-hs.git

custom-setup
  setup-depends:       base >= 4 && < 5, cabal-doctest >= 1 && < 1.1

common common-options
  build-depends:       base >= 4.12.0.0 && < 5
                     , relude
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       AllowAmbiguousTypes
                       DefaultSignatures
                       GeneralizedNewtypeDeriving
                       DeriveAnyClass
                       InstanceSigs
                       FunctionalDependencies
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeOperators
                       TypeFamilies
                       ViewPatterns
                       DerivingStrategies
                       BangPatterns
                       RankNTypes
                       GADTs
                       PatternSynonyms
                       FlexibleContexts
                       FlexibleInstances
                       DataKinds

library
  import:              common-options
  hs-source-dirs:      src
  build-depends:     , directory
                     , safe-exceptions
                     , vector
                     , bytestring
                     , text
                     , some
                     , inline-c
                     , containers
                     , template-haskell
                     , resourcet
                     , unliftio-core
                     , bytestring-to-vector
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
  exposed-modules:     Data.HDF5.Types
                     , Data.HDF5.Context
                     , Data.HDF5.Wrapper
                     , Data.HDF5
                     -- , Data.HDF5.Internal
  cc-options:          -Wall -Wextra
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
                       
  if os(darwin) || os(osx)
    extra-libraries:   hdf5_hl
                       hdf5
  else
    extra-libraries:   hdf5_hl
    pkgconfig-depends: hdf5
                     , zlib

-- executable hdf5-hs
--   import:              common-options
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       hdf5-hs
--                      , text
--                      , vector
--   ghc-options:         -threaded
--                        -rtsopts
--                        -with-rtsopts=-N
--   buildable:           False

executable example00
  import:              common-options
  hs-source-dirs:      example
  main-is:             example00.hs 
  build-depends:       hdf5-hs
  buildable:           True

executable example01
  import:              common-options
  hs-source-dirs:      example
  main-is:             example01.hs 
  build-depends:       hdf5-hs
                     , vector
                     , safe-exceptions
  buildable:           True

executable example02
  import:              common-options
  hs-source-dirs:      example
  main-is:             example02.hs 
  build-depends:       hdf5-hs
                     , text
  buildable:           True

executable example03
  import:              common-options
  hs-source-dirs:      example
  main-is:             example03.hs 
  build-depends:       hdf5-hs
                     , text
  buildable:           True

executable example04
  import:              common-options
  hs-source-dirs:      example
  main-is:             example04.hs 
  build-depends:       hdf5-hs
                     , text
                     , vector
  buildable:           True


test-suite hdf5-hs-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       hdf5-hs
                     , hspec
                     , directory
                     , vector
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  buildable:           True

test-suite doctests
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  build-depends:       hdf5-hs
                     , doctest
  hs-source-dirs:      test
  -- We get some warnings from automatically generated files
  ghc-options:         -Wno-missing-export-lists
  if impl(ghc >= 8.8)
    ghc-options:       -Wno-missing-deriving-strategies
  buildable:           False
