cabal-version:   3.0
name:            hdf5-hs
version:         0.2.0.1
synopsis:        High-level Haskell bindings to HDF5 library
description:     High-level Haskell bindings to HDF5 library
homepage:        https://github.com/twesterhout/hdf5-hs
bug-reports:     https://github.com/twesterhout/hdf5-hs/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          Tom Westerhout
maintainer:
  Tom Westerhout <14264576+twesterhout@users.noreply.github.com>

copyright:       2020-2021 Tom Westerhout
build-type:      Simple
extra-doc-files: README.md

flag use-pkgconfig
  description: Use pkg-config to find HDF5 and ZLib
  manual:      True
  default:     False

flag disable-default-paths
  description: Disable standard paths where hdf5 lib may be found
  manual:      True
  default:     False

source-repository head
  type:     git
  location: https://github.com/twesterhout/hdf5-hs.git

common common-options
  build-depends:      base >=4.16.0.0 && <5
  ghc-options:
    -Wall -Wextra -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wmissing-export-lists -Wpartial-fields
    -Wmissing-deriving-strategies -Wunused-packages

  default-language:   GHC2021
  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

library
  import:          common-options
  hs-source-dirs:  src
  build-depends:
    , bytestring
    , bytestring-to-vector
    , containers
    , deepseq
    , directory
    , inline-c
    , list-t
    , mtl
    , resourcet
    , safe-exceptions
    , some
    , template-haskell
    , text
    , transformers
    , unliftio
    , unliftio-core
    , vector

  exposed-modules: Data.HDF5
  other-modules:
    Data.HDF5.Context
    Data.HDF5.Dataset
    Data.HDF5.Dataspace
    Data.HDF5.Datatype
    Data.HDF5.File
    Data.HDF5.Group
    Data.HDF5.Object
    Data.HDF5.Types

  cc-options:      -Wall -Wextra

  if flag(use-pkgconfig)
    extra-libraries:   hdf5_hl
    pkgconfig-depends: hdf5

  else
    extra-libraries:
      hdf5_hl
      hdf5

    if (os(linux) && !flag(disable-default-paths))
      extra-lib-dirs: /usr/lib/x86_64-linux-gnu/hdf5/serial
      include-dirs:   /usr/include/hdf5/serial

--   if os(linux)
--     extra-libraries: z

-- executable hdf5-hs
--   import:              common-options
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       hdf5-hs
--                      , text
--                      , vector
--   ghc-options:         -threaded
--                        -rtsopts
--                        -with-rtsopts=-N
--   buildable:           False

-- executable example00
--   import:         common-options
--   hs-source-dirs: example
--   main-is:        example00.hs
--   build-depends:  hdf5-hs
--   buildable:      True

-- executable example01
--   import:         common-options
--   hs-source-dirs: example
--   main-is:        example01.hs
--   build-depends:
--     , bytestring
--     , hdf5-hs
--     , vector
-- 
--   buildable:      True

-- executable example02
--   import:         common-options
--   hs-source-dirs: example
--   main-is:        example02.hs
--   build-depends:  hdf5-hs
--   buildable:      True

-- executable example03
--   import:         common-options
--   hs-source-dirs: example
--   main-is:        example03.hs
--   build-depends:  hdf5-hs
--   buildable:      True

-- executable example04
--   import:         common-options
--   hs-source-dirs: example
--   main-is:        example04.hs
--   build-depends:
--     , hdf5-hs
--     , list-t
--     , some
--     , text
-- 
--   buildable:      True

test-suite hdf5-hs-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    Data.HDF5.DatasetSpec
    Data.HDF5.DataspaceSpec
    Data.HDF5.FileSpec
    Data.HDF5.GroupSpec
    Data.HDF5.TypesSpec
    Utils

  build-depends:
    , directory
    , hdf5-hs
    , hspec
    , QuickCheck
    , resourcet
    , some
    , text
    , vector

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

-- test-suite doctests
--   import:         common-options
--   type:           exitcode-stdio-1.0
--   main-is:        doctests.hs
--   build-depends:
--     , doctest
--     , hdf5-hs
-- 
--   hs-source-dirs: test
-- 
--   -- We get some warnings from automatically generated files
--   ghc-options:    -Wno-missing-export-lists
-- 
--   if impl(ghc >=8.8)
--     ghc-options: -Wno-missing-deriving-strategies
-- 
--   buildable:      False
